--- a/lab8/lab.css
+++ b/lab8/lab.css
@@ -1,37 +1,9 @@
-/* we can use a single css file to style all the files in our wwebsite */
+/* Here we can set styles for this lab page that we don't want to effect others pages */
 
-/* you can pick your own background colors, text colors, and fonts */
-
-/* we can select an html element tag, in this case "body" will apply to the whole document */
-body {
-    background-color: #a5ccd8;
-  }
-  
-  /* we can have rules apply to multiple elements at the same time with commas */
-  h1,h2,h3 {
-    font-family: 'Times New Roman', Times, serif;
-  }
-  
-  /* and we can have rules that overlap other rules, both take effect */
-  h1 {
-    letter-spacing: 5px;
-    word-spacing: 5px;
-    font-size: 200%;
-  }
-  
-  /* the hashtag in a CSS selector selects an element by id, e.g., id="content" */
-  #content {
-    margin: 10px;
-    padding: 10px;
-    border: solid 1px #f6b4b4;
-    background-color: #ecc9e2;
-  }
-  
-  /* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
-  .minor-section {
+/* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
+.minor-section {
     padding: 10px;
     margin-bottom: 10px;
-    border: solid 1px #983131;
-    background-color: #00ff1e;
+    border: solid 1px #888;
+    background-color: #DDD8C4;
   }
-  
